Reorganization of config files

--- a/config/mysqlbackup.conf
+++ b/config/mysqlbackup.conf
@@ -1,29 +1,50 @@
 #===============================================================================
-# mysqlbackup.conf
 #
-# Configuration variables for mysqlbackup.
+#    Author: Paulo Pereira <mysqlbackup@lofspot.net>
+#
+#    This program is free software: you can redistribute it and/or modify
+#    it under the terms of the GNU General Public License as published by
+#    the Free Software Foundation, either version 3 of the License, or
+#    (at your option) any later version.
+#
+#    This program is distributed in the hope that it will be useful,
+#    but WITHOUT ANY WARRANTY; without even the implied warranty of
+#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#    GNU General Public License for more details.
+#
+#    You should have received a copy of the GNU General Public License
+#    along with this program in the file LICENSE.  If not, see 
+#    <http://www.gnu.org/licenses/>.
+#
+# =================
+#
+#    DESCRIPTION:
+#       Configuration file for the mysqlbackup script
+#
+#===============================================================================
+#
+#               >>>> CHANGE THIS FILE TO REFLECT YOUR SETUP <<<<
 #
 #===============================================================================
 
-# base dir
-BASE_DIR=/backup   # change this
+# local backup base dir (where the local backups are kept)
+localbackupbasedir=/backup
 
-# mysql backup config
-MYSQL_USER=mysqluser   # change this
-MYSQL_PASS=mysqluserpass   # change this
-MYSQL_BCK_DIR=$BASE_DIR/hotcopy
+# mysql backup dir
+mysqlbckdir=${localbackupbasedir}/hotcopy
 
-# local backup
-BCK_LATEST=$BASE_DIR/latest/
-BCK_ARCHIVE=$BASE_DIR/archive/
-BCK_DIFF=$BASE_DIR/diff/
-
-# rsync.net config
-RSYNC_SERVER=00000@server.rsync.net   # change this
-RSYNC_DIR=scp://${RSYNC_SERVER}/backups/mysql_latest  # change this
-RSYNC_DIR_ARCHIVE=scp://${RSYNC_SERVER}/backups/mysql_archive  # change this
-RSYNC_PUB_KEY="12345678"  # change this
-export PASSPHRASE=987654432100000  # change this
+# local backup dirs
+latestbckdir=${localbackupbasedir}/latest/
+archivebckdir=${localbackupbasedir}/archive/
+BCK_DIFF=${localbackupbasedir}/diff/
 
 # log
-LOG=$BASE_DIR/mysqlbackup.log
+log=${localbackupbasedir}/mysqlbackup.log
+
+# your public key for encrypting the backups
+pubkey="12345678"
+
+# your private key for encrypting the backups
+export PASSPHRASE=987654432100000
+
+#eof
