New email variable

--- a/config/mysqlbackup.conf
+++ b/config/mysqlbackup.conf
@@ -47,4 +47,7 @@ pubkey="12345678"
 # your private key for encrypting the backups
 export PASSPHRASE=987654432100000
 
+# email for sending log
+email=mysqlbackup@lofspot.net
+
 #eof
