Bug in var name

--- a/config/mysqlbackup.conf
+++ b/config/mysqlbackup.conf
@@ -36,7 +36,7 @@ mysqlbckdir=${localbackupbasedir}/hotcopy
 # local backup dirs
 latestbckdir=${localbackupbasedir}/latest/
 archivebckdir=${localbackupbasedir}/archive/
-BCK_DIFF=${localbackupbasedir}/diff/
+diffbckdir=${localbackupbasedir}/diff/
 
 # log
 log=${localbackupbasedir}/mysqlbackup.log
