--- a/config/mysqlbackup.conf
+++ b/config/mysqlbackup.conf
@@ -38,6 +38,9 @@ latestbckdir=${localbackupbasedir}/latest/
 archivebckdir=${localbackupbasedir}/archive/
 diffbckdir=${localbackupbasedir}/diff/
 
+# mysql install dir
+mysqldir=/var/lib/mysql/
+
 # log
 log=${localbackupbasedir}/mysqlbackup.log
 
@@ -49,5 +52,12 @@ export PASSPHRASE=987654432100000
 
 # email for sending log
 email=mysqlbackup@lofspot.net
+
+# local archive backup days to keep
+localarchivekeep=120
+# rsync.net latest backup days to keep
+rsyncnetlatestkeep=120
+# rsync.net archive backup days to keep
+rsyncnetarchivekeep=120
 
 #eof
